--- a/components/footer.css
+++ b/components/footer.css
@@ -2,9 +2,9 @@
     margin-top: calc(var(--spacing-unit) * 2);
     padding-top: var(--spacing-unit);
     border-top: 1px solid var(--color-border);
-    text-align: center;
+    text-align: left;
     color: var(--color-text-muted);
-    font-size: var(--font-size-small);
+    font-size: var(--font-size-base);
 }
 
 .site-footer a {
@@ -14,5 +14,5 @@
 }
 
 .site-footer a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
