--- a/components/post-list.css
+++ b/components/post-list.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
-    padding-inline: var(--content-padding-inline);
+    padding: var(--content-padding-inline);
 }
 
 .post-list-item {
